<resources>
    <string name="app_name">AOD Customizer</string>
    <string name="about">About me</string>
    <string name="welcome_slide1_header">Welcome to AOD-Customizer</string>
    <string name="welcome_slide1_descr">The easiest way to modify your Pixel 2\'s Active-On-Display!\n Show the Battery level, the current volume or more on your Display.</string>
    <string name="welcome_slide2_header">As easy as...</string>
    <string name="welcome_slide2_descr">watching a movie on Netflix.\n AOD-Customizer aims to be simple and effectiv for everyone!</string>
    <string name="welcome_slide3_header">How it works</string>
    <string name="welcome_slide3_descr">This application works by sending an "intent" to the "SystemUI"-Google application. Simple, right? </string>
    <string name="welcome_slide4_header">Permissions. Set. Go!</string>
    <string name="welcome_slide_4_descr">This App needs some Permissions in order to work perfect.\n You can, but don\'t have to, grant them. May count on bad - or no function at all.</string>

    <string name="settings_header1">App Options</string>
    <string name="settings_header2">Bug reporting</string>
    <string name="settings_header3">Advanced</string>

    <string name="batterySetting">Show battery level on ActiveDisplay</string>
    <string name="batterySummary">Decide wether or not the battery level should be displayed</string>

    <string name="notificationTest">Notification test</string>
    <string name="notificationColor">Notification color</string>
    <string name="notificationColorSummary">Set the color for all app notifications</string>
    <string name="notificationTestSummary">Sends a test notification</string>

    <string name="email">E-Mail</string>
    <string name="emailSummary">Set mail-address for bug reporting</string>
    <string name="username">Username</string>
    <string name="usernameSummary">Set a username for bug reporting</string>

    <string name="resetData">Reset Appdata</string>
    <string name="reset_dataSummary"><b>Warning!</b> App will crash!</string>
</resources>
