<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_header1"
        android:title="@string/settings_header1" />
<CheckBoxPreference
    android:key="batterySetting"
    android:title="@string/batterySetting"
    android:summary="@string/batterySummary"/>
    <ListPreference
        android:key="notificationColor"
        android:entries="@array/notificationColor"
        android:entryValues="@array/notificationColor"
        android:summary="@string/notificationColorSummary"
        android:title="@string/notificationColor"/>
    <PreferenceCategory
        android:key="contact_options"
        android:title="@string/settings_header2">
    <EditTextPreference
        android:key="username"
        android:summary="@string/usernameSummary"
        android:title="@string/username"/>
    <EditTextPreference
        android:key="usermail"
        android:summary="@string/emailSummary"
        android:title="@string/email"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_advanced"
        android:title="@string/settings_header3"/>
    <Preference
        android:key="notification_test"
        android:summary="@string/notificationTestSummary"
        android:title="@string/notificationTest"/>
    <Preference
        android:key="reset_data"
        android:summary="@string/reset_dataSummary"
        android:title="@string/resetData"/>
</PreferenceScreen>
